@@ -4,6 +4,7 @@ Pending changes in the mainline
 Orthanc Explorer
 ----------------
 
+* In lookup and query/retrieve, possibility to provide a specific study date
 * Clicking on "Send to remote modality" displays the job information to monitor progress
 
 Maintenance
